# science-portfolio

./: .gitignore  Applied Scientist Roadmap.md  PLAN.md  README.md
.github/workflows/: causal-ci.yml  graphml-ci.yml  p1-ci.yml  p3-ci.yml
project-1-spine/: .dockerignore  Makefile  README.md  pyproject.toml  requirements-airflow.txt  requirements-serve.txt  requirements.txt
project-1-spine/conf/: config.yaml
project-1-spine/dags/: spine_pipeline.py
project-1-spine/docker/: Dockerfile
project-1-spine/scripts/: export_model.py  setup_env.sh
project-1-spine/src/spine/: __init__.py  config.py  drift.py  features.py  ingest.py  schema.py  serve.py  train.py  validate.py
project-1-spine/tests/: conftest.py  test_drift.py  test_features.py  test_serve.py  test_validate.py
project-3-rag/: README.md  pyproject.toml  requirements.txt
project-3-rag/conf/: config.yaml
project-3-rag/eval/: attack_questions.jsonl
project-3-rag/src/rag/: __init__.py  chain.py  config.py  evaluate.py  index.py  ingest.py  retrieve.py  serve.py  tracing.py
project-3-rag/tests/: test_chain.py  test_evaluate.py  test_ingest.py  test_serve.py
project-4-agent/: README.md  pyproject.toml  requirements.txt
project-4-agent/conf/: config.yaml
project-4-agent/eval/: agent_tasks.jsonl
project-4-agent/src/agent/: __init__.py  config.py  evaluate.py  graph.py  tools.py  tracing.py
project-4-agent/tests/: test_evaluate.py  test_graph.py  test_tools.py
project-causal/: README.md  pyproject.toml  requirements.txt
project-graphml/: README.md  pyproject.toml  requirements.txt
(+19 files in other folders)
