[project]
name = "spine"
version = "0.1.0"
description = "Project 1 — The Spine: end-to-end NIDS ML pipeline on a lakehouse pattern"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # PySpark 3.5 uses distutils LooseVersion on py3.12 — noise, not ours.
    "ignore::DeprecationWarning:pyspark.*",
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]
